cluster/apps/omnivore/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: omnivore
spec:
  selector:
    app: postgres
  ports:
    - port: 5432
---
apiVersion: v1
kind: Service
metadata:
  name: minio
  namespace: omnivore
spec:
  selector:
    app: minio
  ports:
    - name: api
      port: 9000
    - name: console
      port: 9001
---
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: omnivore
spec:
  selector:
    app: api
  ports:
    - port: 4000
---
apiVersion: v1
kind: Service
metadata:
  name: web
  namespace: omnivore
spec:
  selector:
    app: web
  ports:
    - port: 80
      targetPort: 3000
